<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<parent>
		<artifactId>root</artifactId>
		<groupId>org.richfaces</groupId>
		<version>3.3.4.Final</version>
	</parent>
	<modelVersion>4.0.0</modelVersion>
	<artifactId>cdk</artifactId>
	<packaging>pom</packaging>
	<name>JSF Components Development kit</name>
	<dependencies />
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.11.0</version>
					<configuration>
						<source>1.8</source>
						<target>1.8</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-plugin-plugin</artifactId>
					<version>2.9</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<modules>
		<module>generator</module>
		<module>maven-cdk-plugin</module>
		<module>maven-javascript-plugin</module>
		<module>maven-archetype-jsf-component</module>
		<module>maven-archetype-jsfwebapp</module>
		<module>maven-archetype-plug-n-skin</module>
		<module>maven-resource-dependency-plugin</module>
		<module>maven-archetype-theme</module>
		<module>richfaces-facelets</module>
	</modules>


	<profiles>
		<profile>
			<id>clover</id>
			<build>
				<plugins>
					<plugin>
						<groupId>com.atlassian.maven.plugins</groupId>
						<artifactId>maven-clover2-plugin</artifactId>
						<configuration>
							<includesAllSourceRoots>
								false
							</includesAllSourceRoots>
							<includesTestSourceRoots>
								false
							</includesTestSourceRoots>
							<jdk>1.5</jdk>

							<excludes>
								<exclude>**/*.java</exclude>
							</excludes>	
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>
